configs/setup/argocd/overlay/argocd-external-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-external-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`api.homelab.local`)
    services:
    - name: argocd-server
      port: 443
  tls:
    passthrough: true
